kubernetes-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: default
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      name: hello
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: kubernetes-example-hello
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world
  namespace: default
  labels:
    app: world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world
  template:
    metadata:
      name: world
      labels:
        app: world
    spec:
      containers:
        - name: world
          image: kubernetes-example-world
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: world
  namespace: default
  labels:
    app: world
spec:
  type: ClusterIP
  selector:
    app: world
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: kubernetes-example-gateway
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: default
  labels:
    app: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.kubernetes.internal
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway
                port:
                  number: 8761
